Implement Sass module configuration and plain forwarding
Assisted-by: codex:gpt-5.6-sol